added voucher total helper

--- a/app/views/home/_product.html.haml
+++ b/app/views/home/_product.html.haml
@@ -1,5 +1,6 @@
 %label
-  = check_box_tag "products[]", product.id, true
+  /= check_box_tag "products[]", product.id, true
+  = hidden_field_tag "products[]", product.id
   %span.your-data-text-left
     = product.name
     \:
