--- a/app/views/home/subscribe.html.haml
+++ b/app/views/home/subscribe.html.haml
@@ -19,7 +19,7 @@
         %span.text-result-medium Preencha seus dados:
         %fieldset#your-data
           = f.semantic_fields_for :address do |a|
-            = a.input :zipcode, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
+            = a.input :zipcode, input_html: { class: "input-1", autocomplete: 'off' }, wrapper_html: { class: "wrapper" }
             = a.input :street, input_html: { class: "input-4" }, wrapper_html: { class: "wrapper" }
             = a.input :complement, input_html: { class: "input-4" }, wrapper_html: { class: "wrapper" }
             = a.input :number, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
@@ -67,8 +67,8 @@
             = c.input :card_holder_name, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
             = c.input :number, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
             = c.input :cvv, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }            
-            = c.input :expiration_date, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }            
-            = c.input :installments, as: :select, collection: options_for_select((1..12).to_a), input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }            
+            = c.input :expiration_date, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }, placeholder: 'MM/AAAA'     
+            = c.input :installments, as: :select, collection: options_for_select((1..12).to_a, 1), input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }            
             / = l.semantic_fields_for :credit_card, validate: false do |c|
             /   = c.input :card_holder_name, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
             /   = c.input :number, input_html: { class: "input-1" }, wrapper_html: { class: "wrapper" }
