--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -5,6 +5,7 @@
     %title Wizard - Você Bilíngue
     %meta{:content => "Café Azul Agência Digital - www.cafeazul.com.br", :name => "author"}/
     %meta{:content => "pt-br", "http-equiv" => "content-language"}/
+    / %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
     %link{:href => "/favicon.ico", :rel => "shortcut icon", :type => "image/x-icon"}/
     %link{:href => "http://fonts.googleapis.com/css?family=Droid+Sans:400,700", :rel => "stylesheet", :type => "text/css"}/
     = javascript_include_tag "admin"
@@ -12,21 +13,68 @@
     = csrf_meta_tags
 
   - if user_signed_in?
-    %body
-      = render 'admin/shared/navigation'
-      %section{:role => "main"}
-        %article.full-block.clearfix
-          %header
-            %h2 Chromatron Admin Theme
-          %section
-            = render 'admin/shared/notifications'
-            = yield
+    %body{style: "padding-top: 60px;"}
+      .navbar.navbar-inverse.navbar-fixed-top
+        .navbar-inner
+          .container
+            %button.btn.btn-navbar
+              %span.icon-bar
+              %span.icon-bar
+              %span.icon-bar
+            %a.brand{href: "./index.html"} MultiCommerce
+            .nav-collapse.collapse
+              %ul.nav
+                %li.active
+                  = link_to 'Leads', admin_leads_path
+                %li
+                  = link_to 'Vouchers', admin_vouchers_path
+              %ul.pull-right
+                / %li
+                /   = link_to 'editar', edit_user_registration_path
+                %li
+                  = link_to 'sair', destroy_user_session_path, :method => :delete
+      / %header
+      /   .container 
+      /     %h1 Leads
+      .container
+        .navbar
+          .navbar-inner
+            .container
+              %a.btn.btn-navbar{"data-toggle" => "collapse", "data-target" => ".nav-collapse"}
+                %span.icon-bar
+                %span.icon-bar
+                %span.icon-bar
+              %a.brand{href:"#"}= yield :title
+              .nav-collapse
+                %ul.nav.pull-right
+                  / %li.active
+                  /   %a{href:"#"} Home
+                  / %li
+                  /   %a{href:"#"} Home
+                  %li.dropdown
+                    %a.dropdown-toggle{href: '#', "data-toggle" => "dropdown"} 
+                      Items selecionados
+                      %b.caret
+                    %ul.dropdown-menu
+                      %li
+                        %a{href: '#'} Prospectar
+                        %a{href: '#'} Matricular
+      .container
+        = yield
+      / = render 'admin/shared/navigation'
+      / %section{:role => "main"}
+      /   %article.full-block.clearfix
+      /     %header
+      /       %h2 Chromatron Admin Theme
+      /     %section
+      /       = render 'admin/shared/notifications'
+      /       = yield
   - else
     %body.login
       %section{:role => "main"}          
         %a{:href => "index.html", :title => "Back to Homepage"}
         = yield
-
+    
         .notification.error
           %a.close-notification{:href => "#", :rel => "tooltip", :title => "Hide Notification"} x
           %p
