addes leads timestamps and login layout

--- a/app/views/admin/vouchers/index.html.haml
+++ b/app/views/admin/vouchers/index.html.haml
@@ -1,7 +1,5 @@
-/ - @vouchers.each do |voucher|
-/   %p= voucher.inspect
-
 - content_for :title, 'Vouchers'
+= render 'admin/shared/navbar'
   
 %table.table
   %thead
