--- a/app/views/admin/shared/_navbar.html.haml
+++ b/app/views/admin/shared/_navbar.html.haml
@@ -1,3 +1,4 @@
+#resposta
 .container
   .navbar
     .navbar-inner
@@ -19,5 +20,10 @@
                 %b.caret
               %ul.dropdown-menu
                 %li
-                  %a{href: '#'} Prospectar
+                  = link_to 'Marcar como prospectado', prospect_admin_leads_path, id: 'bulk_prospect', class: ['bulk_action']
+                  %a{href: '#'} Matricular
+                %li.divider
+                  Marcar como
+                %li
+                  = link_to 'Desmarcar como prospectado', prospect_admin_leads_path, id: 'bulk_prospect', class: ['bulk_action']
                   %a{href: '#'} Matricular
