added has_scope and created basic filters

--- a/app/views/admin/leads/index.html.haml
+++ b/app/views/admin/leads/index.html.haml
@@ -1,6 +1,26 @@
 - content_for :title, 'Leads'
 = render 'admin/shared/navbar'
 
+.accordion
+  .accordion-group
+    #accordion2.accordion-heading
+      %a.accordion-toggle{"data-toggle" => "collapse", "data-parent" => "#accordion2", "href" => "#collapseOne"}
+        Filtros
+    #collapseOne.accordion-body.collapse.in
+      .accordion-inner
+        = form_tag admin_leads_path, method: 'GET' do |f|
+          /= text_field_tag 'by_period[field]', 'created_at'
+          = select_tag 'by_period[field]', options_for_select(['', 'created_at', 'prospected_at'])
+          .input-append.date{"data-date" => "12-02-2012", "data-date-format" => "dd-mm-yyyy"}
+            %input.span2{"size" => "16", "type" => "text", "value" => "12-02-2012", "name" => "by_period[started_at]"}
+            %span.add-on
+              %i.icon-th
+          .input-append.date{"data-date" => "12-02-2012", "data-date-format" => "dd-mm-yyyy"}    
+            %input.span2{"size" => "16", "type" => "text", "value" => "12-02-2012", "name" => "by_period[ended_at]"}
+            %span.add-on
+              %i.icon-th
+          %button.btn.btn-primary{:type => "submit"} Buscar
+
 = form_tag prospect_admin_leads_path, id: 'bulk_form' do |f|
   %table.table.table-hover
     %thead
