--- a/app/views/admin/shared/_navbar.html.haml
+++ b/app/views/admin/shared/_navbar.html.haml
@@ -7,7 +7,8 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.brand{href:"#"}= yield :title
+        = link_to (yield :title), admin_leads_path, class: 'brand'
+        /%a.brand{href:"#"}= yield :title
         .nav-collapse
           %ul.nav.pull-right
             / %li.active
