removed chromatron imgs and created address autocomplete address view

--- a/app/assets/stylesheets/application/search.sass
+++ b/app/assets/stylesheets/application/search.sass
@@ -71,7 +71,7 @@
     &#search-form
       float: left
       width: 800px
-    input#input-search
+    input
       background: image-url("application/search-input-1.png") no-repeat scroll center center transparent
       border: medium none
       height: 31px
