--- a/app/views/home/unities.html.haml
+++ b/app/views/home/unities.html.haml
@@ -7,7 +7,8 @@
         = hidden_field_tag "page", "1"
         = hidden_field_tag "lead[latitude]"
         = hidden_field_tag "lead[longitude]"        
-        = text_field_tag "lead[address_search]", @lead.address_search, id: "input-search", placeholder: "Digite seu endereço, bairro, rua ou cep"
+        = text_field_tag "lead[address_search]", @lead.address_search, placeholder: "Digite seu endereço, bairro, rua ou cep"
+        / = text_field_tag "lead[address_search]", @lead.address_search, id: "input-search", placeholder: "Digite seu endereço, bairro, rua ou cep"
         = submit_tag "Buscar »", class: "btn-search"
         
   #lead_content
@@ -20,31 +21,3 @@
         %br/
         = paginate @unities
       /= render partial: "payment_template", locals: { f: f }
-  
-
-:javascript
-  function initialize() {
-    var input = document.getElementById('input-search');
-    var options = {
-      types: ['geocode'],
-      componentRestrictions: {country: 'br'}
-    };
-    var autocomplete = new google.maps.places.Autocomplete(input, options);
-
-    google.maps.event.addDomListener(input, 'keydown', function(e) {
-      if (e.keyCode == 13) { // hits enter
-        var geocoder = new google.maps.Geocoder();
-        geocoder.geocode({ 'address': input.value }, function(results, status) {
-          if (status == google.maps.GeocoderStatus.OK) {
-            console.log(results);
-  					$('#lead_latitude').val(results[0].geometry.location.Xa)
-  					$('#lead_longitude').val(results[0].geometry.location.Ya)
-          }
-        });
-
-        e.preventDefault();
-      } 
-    });
-
-  }
-  google.maps.event.addDomListener(window, 'load', initialize);
